# yaml_cv

./: .containerignore  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  make_cv.rb
.github/workflows/: check-no-pii.yml
deploy/: README.md  web.env.example  yaml-cv.container
pyexport/: README.md  pyproject.toml
pyexport/src/cv_export/: __init__.py  cli.py  md_parser.py  rirekisho_excel.py  rirekisho_word.py  serializers.py  shokumu_pdf.py  shokumu_word.py  styling.py  web.py
pyexport/src/cv_export/static/: common.js  rirekisho.html  rirekisho.js  sheet.css  shokumu.html  shokumu.js  style.css
pyexport/src/cv_export/templates/: rirekisho_template.docx  rirekisho_template.xlsx
scripts/: check_no_pii.py
