[project]
name = "cv-export"
version = "0.1.0"
description = "履歴書・職務経歴書をWord/Excel/Webで出力するツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
cv-export = "cv_export.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
